Minor bugfixes
- Fixed tree display height scaling (and overflowing)
- Fixed type annotations code

--- a/moviewer.css
+++ b/moviewer.css
@@ -53,22 +53,21 @@ ul {
 	overflow: auto;
 }
 
+
 #div_search_parent {
-	width: 100%;
-	height: 10%;
-	float: left;
-	overflow: auto;
+	width: calc(100% - 6px);
+	margin: 3px;
+	height: 25px;
 }
 
 #searchbox {
-	width: 99%;
+	width: 100%;
 	height: 100%;
-	margin: 3px;
 }
 
 #div_tree_parent {
 	width: 100%;
-	height: 90%;
+	height: calc(100% - 31px);
 	float: left;
 	overflow: auto;
 }
